Added the x86-64 encoder to its own file
- Added editor files to gitignore.
- Renamed from "parser" to "framework to be more
  descriptive of its boundries.
- Seperated the encoder from the this file.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 *.a
 *.la
 *.lo
+*compiled
 
 # Shared objects (inc. Windows DLLs)
 *.dll
@@ -30,3 +31,7 @@
 
 # Debug files
 *.dSYM/
+
+# editor temp files
+\#*
+*~
